--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@typescript-eslint/parser": "^8.47.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.11"
+  },
+  "dependencies": {
+    "zod": "^4.1.12"
   }
 }
